[package]
name = "playaround"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
my_proc_macro = { path = "./my_proc_marco" }
